--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
     </div>
     <div class="right">
         <textarea class="output" readonly></textarea>
+        <textarea class="debug" readonly></textarea>
     </div>
 </div>
 <footer>
